--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "sala-de-estimativa",
   "version": "1.0.0",
   "private": true,
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
-  "dependencies": { "firebase": "^9.23.0", "next": "13.4.7", "react": "18.2.0", "react-dom": "18.2.0" }
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "firebase": "^9.23.0",
+    "next": "13.4.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "socket.io-client": "^4.8.1"
+  }
 }
